--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,6 +3,8 @@ services:
         class: "%paypal_payment.paypal_class%"
         arguments:
             - "%paypal_payment%"
+            - "%kernel.root_dir%"
+
     paypal_payment.auth:
         class: "%paypal_payment.auth_class%"
         arguments:
